# lobster-trapp

./: .gitignore  .gitmodules  CLAUDE.md  GLOSSARY.md  README.md  SECURITY.md  compose.yml  docker-compose.example.yml
.github/workflows/: ci.yml
app/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
app/e2e/: navigation.spec.ts  smoke.spec.ts  user-facing.spec.ts  wizard.spec.ts
app/src/: App.tsx  main.tsx  test-setup.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  lifecycle.rs  main.rs  status_aggregator.rs
app/src-tauri/src/commands/: config.rs  diagnostics.rs  execute.rs  health.rs  lifecycle.rs  manifest_cmds.rs  mod.rs  prerequisites.rs  spending.rs  status.rs  stream.rs  telegram.rs  workflow_cmds.rs
app/src-tauri/src/orchestrator/: discovery.rs  error.rs  manifest.rs  mod.rs  runner.rs  state.rs  tests.rs
components/moltbook-pioneer/: CLAUDE.md  component.yml
docs/: TODO.md  coming-soon.html  handoff-pioneer-gaps.md  handoff.md  icon-specs.md  index.html  product-assessment.md  release-notes-v0.2.0.md  roadmap-v4-finalization.md  social-preview-specs.md  trifecta.md  v0.2.0-ship-plan.md  vision-and-status.md
docs/social-preview/: lobster-trapp-spec.md
docs/specs/: 2026-04-07-bundle-and-updater.md  2026-04-19-frontend-reframe-spec.md  2026-04-19-product-identity-spec.md  (+5 more)
schemas/: component.schema.json
scripts/: setup-updater.sh
tests/: integration-test.sh  orchestrator-check.sh
(+167 files in other folders)
