[package]
name = "lobster-trapp"
version = "0.1.0"
edition = "2021"
description = "Security-first desktop GUI for the OpenClaw ecosystem"
authors = ["Albert Dobmeyer"]
license = "MIT"
repository = "https://github.com/albertdobmeyer/lobster-trapp"
homepage = "https://github.com/albertdobmeyer/lobster-trapp#readme"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
glob = "0.3"
regex = "1"
thiserror = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "lobster_trapp_lib"
crate-type = ["lib", "cdylib", "staticlib"]
